--- a/public/css/app.css
+++ b/public/css/app.css
@@ -504,6 +504,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .max-w-screen-md {
   max-width: 768px;
 }
+.list-none {
+  list-style-type: none;
+}
 .flex-row {
   flex-direction: row;
 }
