--- a/public/css/app.css
+++ b/public/css/app.css
@@ -471,6 +471,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
+.inline {
+  display: inline;
+}
 .flex {
   display: flex;
 }
@@ -497,9 +500,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .max-w-screen-lg {
   max-width: 1024px;
-}
-.max-w-xs {
-  max-width: 20rem;
 }
 .max-w-screen-md {
   max-width: 768px;
@@ -871,14 +871,18 @@ footer.footer .socials {
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  max-width: 20rem;
   align-items: center;
   justify-content: space-between;
   padding-left: 4rem;
   padding-right: 4rem;
 }
+footer.footer .socials a {
+  max-width: 20rem;
+}
 footer.footer .socials a .icon {
   display: inline;
+  height: 1.5rem;
+  width: 1.5rem;
 }
 footer.footer .credits {
   padding-top: 2rem;
