--- a/resources/css/components/footer.css
+++ b/resources/css/components/footer.css
@@ -1,5 +1,5 @@
 footer.footer {
-    @apply md:mx-8 py-8 border-t border-gray-300;
+    @apply md:mx-8 py-8 border-t border-gray-300 mt-auto;
 
     a {
         @apply text-white hover:text-teal-500;
@@ -11,10 +11,10 @@ footer.footer {
     }
 
     .socials {
-        @apply px-16 flex mx-auto items-center justify-between;
+        @apply px-16 flex flex-col md:flex-row mx-auto items-center justify-between;
 
         a {
-            @apply max-w-xs;
+            @apply max-w-xs mb-2 md:m-0;
             .icon {
                 @apply inline w-6 h-6;
             }
@@ -22,6 +22,6 @@ footer.footer {
     }
 
     .credits {
-        @apply text-center text-gray-300 pt-8 sm:pt-10 font-light;
+        @apply text-center text-gray-300 pt-4 md:pt-10 font-light;
     }
 }
