--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,8 +12,8 @@ body {
 }
 
 main {
-    @apply max-w-screen-lg flex flex-col md:mx-auto;
-    @apply md:px-16 px-4;
+    @apply max-w-screen-lg flex flex-col;
+    @apply md:px-16 px-4 w-full mx-auto;
 }
 
 .feather {
