--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="md:mx-8 py-8 border-t border-gray-300 mt-auto">
+<footer class="md:mx-8 py-8 border-t border-bg-400 mt-auto">
   <div class="max-w-screen-lg mx-auto px-4 container">
     <div
       class="px-16 flex flex-col md:flex-row mx-auto items-center justify-center"
