--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,10 +1,90 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
+  <div class="flex flex-col md:flex-row-reverse gap-8 mb-12">
+    <aside class="text-gray-900 w-full md:w-64 relative">
+      <section
+        class="rounded-md shadow-lg bg-gray-100 px-4 py-4 md:sticky md:top-8"
+      >
+        <h1 class="text-xl text-teal-600 font-semibold py-2 uppercase">Tags</h1>
+        {{- if .Params.tags }}
+          <ul class="flex flex-wrap md:px-1">
+            {{ range .Params.tags | first 5 }}
+              <li class="mr-2 mb-2 p-1">
+                <a
+                  href="{{ "tags/" | relLangURL }}{{ . }}"
+                  title="{{ . }}"
+                  class="text-indigo-500 hover:text-indigo-400 font-medium font-mono tag"
+                >
+                  #{{ . }}
+                </a>
+              </li>
+            {{ else }}
+              <li class="mr-2 mb-2">Pas de tag pour ce post</li>
+            {{ end }}
+          </ul>
+        {{ end }}
+      </section>
+    </aside>
 
-  {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
-  {{ $dateHuman := .Date | time.Format ":date_long" }}
-  <time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+    <article
+      class="rounded-md shadow-lg bg-gray-100 px-2 py-12 md:px-8 text-gray-900 flex-1"
+    >
+      <header class="mb-10">
+        <div class="mb-4 flex flex-col md:flex-row mx-4 flex-1">
+          <h1 class="text-4xl font-bold mb-4 flex-1">{{ .Title }}</h1>
 
-  {{ .Content }}
-  {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+          <div class="text-sm text-gray-700 text-right mt-4">
+            <p class="italic">
+              Publié le
+              {{ .Page.PublishDate.Format "02/01/2006" -}}
+            </p>
+            <p>
+              <span>
+                {{ .WordCount }}
+                mots
+              </span>
+              <span class="split">·</span>
+              <span>
+                {{ .ReadingTime }}
+                minutes pour lire
+              </span>
+            </p>
+          </div>
+        </div>
+      </header>
+
+      {{ with .Params.featured_image }}
+        <figure class="mb-10">
+          {{ $img := .image | $.Resources.Get }}
+          {{ $img = $img.Resize "x1000 webp picture" }}
+
+          {{ $caption := "" }}
+          {{ with .caption }}
+            {{ $caption = . }}
+          {{ else }}
+            {{ $caption = $img.Title }}
+          {{ end }}
+
+
+          <img
+            class="aspect-auto mx-auto object-cover antialiased w-full"
+            sizes="(max-width: 1000px) 400px, 700px"
+            src="{{ $img.RelPermalink }}"
+            alt="{{ $caption }}"
+            title="{{ $caption }}"
+          />
+
+          {{ with $.Params.caption }}
+            <figcaption>{{ . }}</figcaption>
+          {{ end }}
+        </figure>
+      {{ end }}
+
+
+      <div
+        class="my-8 mx-2 prose lg:prose-lg prose-slate max-w-none text-justify prose-headings:text-teal-600"
+      >
+        {{ .Content }}
+      </div>
+    </article>
+  </div>
 {{ end }}
