--- a/layouts/partials/card.html
+++ b/layouts/partials/card.html
@@ -1,5 +1,5 @@
 <div
-  class="rounded-md shadow-lg bg-gray-100 px-2 py-4 lg:p-8 mb-12 text-gray-900 flex-1 flex flex-col lg:flex-row gap-4"
+  class="rounded-md shadow-lg bg-gray-100 px-2 py-4 lg:p-8 mb-8 text-gray-900 flex-1 flex flex-col lg:flex-row gap-4"
 >
   {{ with .Params.featured_image }}
     {{ $img := .image | $.Resources.Get }}
@@ -11,6 +11,17 @@
       alt="{{ .Title }}"
       class="w-full lg:w-1/4 aspect-auto object-cover object-center antialiased rounded-md"
     />
+  {{ else }}
+    <div
+      class="w-full lg:w-1/4 aspect-auto object-cover object-center antialiased rounded-md bg-gray-300 flex items-center justify-center"
+    >
+      {{ partial "icons/icon" (dict
+        "vendor" "lucide"
+        "name" "image"
+        "className" "w-16 h-16 text-gray-500"
+        )
+      }}
+    </div>
   {{ end }}
 
 
