--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,7 +1,5 @@
 {{ define "main" }}
-  <h1 class="text-3xl md:text-4xl font-bold flex-1 mb-8">
-    Ma dernière publication
-  </h1>
+  <h1 class="text-3xl md:text-4xl font-bold mb-8">Ma dernière publication</h1>
 
   {{ range first 1 (where .Site.RegularPages.ByDate.Reverse "Section" "posts") }}
     <div>
