--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{ if eq .Type "tags" }}
-    <h1 class="text-3xl md:text-4xl font-bold flex-1 mb-8">
+    <h1 class="text-3xl md:text-4xl font-bold mb-8">
       Publications
       <span class="text-indigo-400 font-medium font-mono">#{{ .Name }}</span>
     </h1>
