--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -9,7 +9,7 @@
     </div>
   {{ else }}
     <div
-      class="rounded-md shadow-lg bg-gray-100 px-2 py-4 md:p-8 mb-12 text-gray-900 flex-1 flex flex-col md:flex-row gap-4"
+      class="rounded-md shadow-lg bg-gray-100 px-2 py-4 md:p-8 mb-12 text-gray-900 flex flex-col md:flex-row gap-4"
     >
       Pas de publication pour le moment
     </div>
