--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,16 +6,18 @@
       >
         <h1 class="text-xl text-teal-600 font-semibold py-2 uppercase">Tags</h1>
         <ul class="flex flex-wrap xl:px-1">
-          {{ range .Params.tags | first 5 }}
-            <li class="mr-2 mb-2 p-1">
-              <a
-                href="{{ "tags/" | relLangURL }}{{ . }}"
-                title="{{ . }}"
-                class="text-indigo-500 hover:text-indigo-400 font-medium font-mono tag"
-              >
-                #{{ . }}
-              </a>
-            </li>
+          {{ if .Params.tags }}
+            {{ range .Params.tags | first 5 }}
+              <li class="mr-2 mb-2 p-1">
+                <a
+                  href="{{ "tags/" | relLangURL }}{{ . }}"
+                  title="{{ . }}"
+                  class="text-indigo-500 hover:text-indigo-400 font-medium font-mono tag"
+                >
+                  #{{ . }}
+                </a>
+              </li>
+            {{ end }}
           {{ else }}
             <li class="mr-2 mb-2">Pas de tag pour ce post</li>
           {{ end }}
