--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -40,7 +40,7 @@
     </aside>
 
     <article
-      class="post rounded-md shadow-lg bg-gray-100 px-2 py-12 xl:px-8 text-gray-900 flex-1 max-w-full min-w-[300px]"
+      class="post rounded-md shadow-lg bg-gray-100 px-2 py-12 xl:px-8 text-gray-900 flex-1 max-w-full md:max-w-[var(--breakpoint-xl)]  min-w-[300px]"
     >
       <header class="mb-10">
         <div class="mb-4 flex flex-col xl:flex-row mx-4 flex-1">
@@ -95,7 +95,7 @@
 
 
       <div
-        class="my-8 mx-2 prose xl:prose-lg prose-slate lg:max-w-none text-justify prose-headings:text-teal-600"
+        class="my-8 mx-2 prose xl:prose-lg prose-slate max-w-none text-justify prose-headings:text-teal-600"
       >
         {{ .Content }}
       </div>
