--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,7 +12,7 @@
   >
     {{ partial "header.html" . }}
     {{- partial "hugopress/body-begin.html" . }}
-    <main class="container md:px-16 px-4 w-full mx-auto flex-1 flex flex-col">
+    <main class="container md:px-16 px-4 w-full self-center flex-1 flex flex-col">
       {{ block "main" . }}{{ end }}
     </main>
     {{- partial "hugopress/body-end.html" . }}
