--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <header class="py-10 sm:py-14 z-30 w-full">
   <div
-    class="container h-full mx-auto px-6 flex flex-col lg:flex-row items-center justify-center lg:justify-between"
+    class="container h-full self-center px-6 flex flex-col lg:flex-row items-center justify-center lg:justify-between"
   >
     <a
       href="/"
-      class="text-white font-black text-3xl flex flex-row items-center gap-2"
+      class="text-white font-black text-3xl flex flex-row items-center gap-2 min-w-fit"
     >
       {{- with resources.Get "images/logo.svg" }}
         <img
