--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -70,10 +70,14 @@ html:has(.zoom-container) {
  */
 @layer utilities {
   article .prose {
-    @apply prose-a:text-teal-600 hover:prose-a:text-teal-500 prose-a:no-underline;
+    @apply [&_a]:text-teal-600 [&_a]:hover:text-teal-500 [&_a]:no-underline;
 
     hr {
       @apply w-48 h-1 mx-auto border-0 rounded bg-teal-700/50;
+    }
+
+    pre.mermaid {
+      @apply bg-[unset] justify-items-center;
     }
   }
 }
