fix: page header not centered

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
-<header class="py-10 sm:py-14 z-30 w-full">
+<header class="py-10 sm:py-14 z-30 w-full justify-items-center">
   <div
-    class="container h-full self-center px-6 flex flex-col lg:flex-row items-center justify-center lg:justify-between"
+    class="container h-full px-6 flex flex-col lg:flex-row items-center justify-center lg:justify-between"
   >
     <a
       href="/"
